# Little-Tree-Wallpaper-Next

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: plugin_dev.md  theme-system.md
examples/ltws/bing_daily/: categories.toml  config.toml  source.toml
examples/ltws/bing_daily/apis/: bing_daily.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  constants.ts  i18n.ts  main.tsx  styles.css  theme.ts  themeSystem.ts  types.ts  useResolvedThemeAssetSource.ts  utils.ts
frontend/src/components/: AutoChangePlannerPage.tsx  StorePanel.tsx  ThemeEnvironment.tsx  ThemeManagerPanel.tsx  WallpaperCreator.tsx  WallpaperSourceCreatorPanel.tsx  gallery.tsx  resourceCards.tsx  shared.tsx
frontend/src/locales/: en-US.ts  zh-CN.ts
src/: config.py  ltwapi.py  main.py
src/app/: application.py  auto_change.py  constants.py  downloads.py
src/app/core/: pages.py
src/app/plugins/: __init__.py  base.py  manager.py
src/little_tree_wallpaper/: app.py  app_api.py  display.py  models.py  paths.py  settings.py  single_instance.py  tray.py
src/little_tree_wallpaper/services/: auto_change.py  bing.py  favorites.py  intelligent_market.py  ltws.py  plugins.py  sniff.py  spotlight.py  storage.py  store.py  sys_wallpaper.py  wallpaper.py
src/plugins/: core.py
